[gd_scene load_steps=4 format=3 uid="uid://6p16dmk7jogj"]

[ext_resource type="Script" path="res://assets/src/objects/entities/projectiles.gd" id="1_khj4v"]
[ext_resource type="SpriteFrames" uid="uid://cta0ro4staquo" path="res://assets/animations/projectiles/fire_ball.tres" id="2_2sdnr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8df7j"]

[node name="projectiles" type="Area2D"]
y_sort_enabled = true
script = ExtResource("1_khj4v")

[node name="anim_sp" type="AnimatedSprite2D" parent="."]
z_index = 6
sprite_frames = ExtResource("2_2sdnr")
animation = &"shoot"

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8df7j")

[node name="visibleBox" type="VisibleOnScreenEnabler2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="anim_sp" to="." method="_on_animation_finished"]
[connection signal="screen_exited" from="visibleBox" to="." method="_on_visible_screen_exited"]
